 * #1403 (Python import otagrum throws an error)
 * #1404 (Bug in KrigingAlgorithm+hmat-oss)
 * #1405 (Most of the simulation algorithms for rare event fail on a coronavirus example)
 * #1416 (MethodOfMomentsFactory has no setOptimizationBounds method)
 * #1419 (BoundingVolumeHierarchy segaults/hangs)

== 1.14 release (2019-11-13) == #release-1.14

=== Library ===

==== IMPORTANT: Distributions parametrization changes ====
 * New argument ordering in Frechet ctor: scale(beta), shape(alpha), location(gamma) (swapped alpha and beta)
 * New parametrization in Gumbel: scale(beta), position(gamma) (beta=1/alpha for first argument)
 * New parametrization in Beta: shape(alpha), shape(beta), location(a), location(b) (beta=t-r for second argument)
 * New parametrization in InverseGamma: rate(lambda), shape(k) (swapped arguments)
 * New parametrization in InverseNormal: location(mu), rate(lambda) (swapped arguments)
 * New parametrization in Laplace: mean(mu), rate(lambda) (swapped arguments)
 => One can use "import openturns.shims as ot" to maintain compatibility with older scripts

==== Major changes ====
 * New optimization solvers (Dlib, Bonmin for mixed integer optimization problems)
 * New distributions (SquaredNormal, WeibullMax, Pareto, DiscreteCompoundDistribution, MixedHistogramUserDefined)
 * New estimators (ParetoFactory, GeneralizedExtremeValueFactory, LeastSquaresDistributionFactory, PlackettCopulaFactory)
 * New copulas (JoeCopula, MarshallOlkinCopula, PlackettCopula)
 * Linear model learner (LinearModelStepwiseAlgorithm)
 * System events (IntersectionEvent, UnionEvent, SystemFORM, MultiFORM)

==== New classes ====
 * Dlib
 * SquaredNormal
 * NullHessian
 * GumbelLambdaGamma
 * LogNormalMuErrorFactor
 * WeibullMax
 * WeibullMaxFactory
 * WeibullMaxMuSigma
 * GeneralizedExtremeValueFactory
 * Pareto
 * LeastSquaresDistributionFactory
 * ParetoFactory
 * DiscreteCompoundDistribution
 * Bonmin
 * IntersectionEvent
 * UnionEvent
 * SystemFORM
 * MultiFORM