@@ -43,6 +43,7 @@
  * #1405 (Most of the simulation algorithms for rare event fail on a coronavirus example)
  * #1416 (MethodOfMomentsFactory has no setOptimizationBounds method)
  * #1419 (BoundingVolumeHierarchy segaults/hangs)
+ * #1423 (The computeSilvermanBandwidth of the HistogramFactory has no help)
 
 == 1.14 release (2019-11-13) == #release-1.14
 
